Fix back button and hide overflow on p

--- a/static/stadtgedaechtnis_frontend/css/_styles.scss
+++ b/static/stadtgedaechtnis_frontend/css/_styles.scss
@@ -430,6 +430,7 @@ section#article-section {
         padding: 0.25rem;
         float: left;
         width: 100%;
+        overflow: hidden;
       }
 
       p.form {
