--- a/static/stadtgedaechtnis_frontend/css/style.css
+++ b/static/stadtgedaechtnis_frontend/css/style.css
@@ -763,6 +763,7 @@ section#article-section div.new-entry form p {
   padding: 0.25rem;
   float: left;
   width: 100%;
+  overflow: hidden;
 }
 section#article-section div.new-entry form p.form {
   width: 45%;
